--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  
-  <p>hello world</p>
-  
-  li.test*3>a.test2[href=#]{test}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>mio_folio_1</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header__inner">
+            <a href="#" class="logo">
+              <img src="images/logo.svg" alt="" class="logo__img" />
+            </a>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">NEW CARS</a>
+                </li>
+                <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">PRE-OWNED CARS</a>
+                </li>
+                <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">FINANCE</a>
+                </li>
+                <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">LEASE VS BUY</a>
+                </li>
+                <li class="menu__list-item">
+                  <a href="#" class="menu__list-link">CONTACT US</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
 
-  <script src="js/main.js"></script>
-</body>
+      <main class="main"></main>
+
+      <footer class="footer"></footer>
+    </div>
+
+    <script src="js/main.js"></script>
+  </body>
 </html>
