--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="css/reset.css" />
+    <!-- <link rel="stylesheet" href="css/reset.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -26,6 +26,7 @@
             <a href="#" class="logo">
               <img src="images/logo.svg" alt="" class="logo__img" />
             </a>
+
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
@@ -56,17 +57,206 @@
             <a href="#" class="top__link">FIND A CAR</a>
           </div>
         </section>
+
         <div class="slider">
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-image: url(images/slide-1.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(images/slide-1.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(images/slide-1.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(images/slide-1.jpg);"></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(images/slide-1.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(images/slide-2.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(images/slide-1.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(images/slide-2.jpg)"
+              ></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
+
+        <section class="why-lease">
+          <div class="container">
+            <h2 class="section-title">Why Lease with D&M?</h2>
+            <ul class="why-lease__list">
+              <li class="why-lease__item">
+                <img
+                  src="images/why-lease-1.svg"
+                  alt=""
+                  class="why-lease__item-img"
+                />
+                <h3 class="why-lease__item-title">Top Dealers</h3>
+                <p class="why-lease__item-text">
+                  TrueCar Certified Dealers compete for your business by
+                  providing discounted pricing on in-stock inventory.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="images/why-lease-2.svg"
+                  alt=""
+                  class="why-lease__item-img"
+                />
+                <h3 class="why-lease__item-title">Discounted Pricing</h3>
+                <p class="why-lease__item-text">
+                  View local inventory from the comfort of home and get access
+                  to guaranteed savings on the car of your choice.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="images/why-lease-3.svg"
+                  alt=""
+                  class="why-lease__item-img"
+                />
+                <h3 class="why-lease__item-title">Lower Payments</h3>
+                <p class="why-lease__item-text">
+                  Get discounted pricing when you shop for a car or truck using
+                  TrueCar and save on your lease payment.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="images/why-lease-4.svg"
+                  alt=""
+                  class="why-lease__item-img"
+                />
+                <h3 class="why-lease__item-title">Easy Upgrade</h3>
+                <p class="why-lease__item-text">
+                  Easy to upgrade to the newest vehicle model every few years if
+                  you would like to be modern and comfortable
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="how-does">
+          <div class="container">
+            <div class="how-does__inner">
+              <h2 class="section-title">How Does Leasing Work?</h2>
+
+              <p class="how-does__text">
+                Leasing a vehicle is essentially entering into a long term
+                rental agreement for that vehicle. Unlike a traditional car
+                purchase, you don’t actually own the vehicle. Instead, a leasing
+                company purchases the vehicle from the dealer on your behalf and
+                then you make monthly payments to the leasing company for the
+                duration of your lease. Some leases however, do provide the
+                option to purchase the vehicle at the end of the lease.
+              </p>
+
+              <h4 class="how-does__title">
+                Similar to a short term car rental, there are rules that define:
+              </h4>
+
+              <ol class="how-does__list">
+                <li class="how-does__item">
+                  How much you can drive, stated as annual miles (excess miles
+                  are charged at a specified rate)
+                </li>
+                <li class="how-does__item">
+                  Types of damage that you may be liable for at the end of your
+                  lease
+                </li>
+                <li class="how-does__item">
+                  The procedures and costs when you return the vehicle at the
+                  end of your lease
+                </li>
+              </ol>
+
+              <p class="how-does__text">
+                Lease contracts are a commitment and ending them early can be
+                difficult and expensive so it is important to consider your
+                circumstances carefully before you decide.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="video">
+          <div class="container">
+            <h2 class="section-title video__title">WELCOME TO D&M LEASING</h2>
+          </div>
+
+          <p class="video__text">Find out how easy it is to lease from D&M</p>
+
+          <iframe
+            class="video__content"
+            width="1000"
+            height="500"
+            src="https://www.youtube.com/embed/s3ggmVxKzg0?controls=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </section>
+
+        <section class="important">
+          <div class="container">
+            <h2 class="section-title important__title">
+              Important Things to Consider
+            </h2>
+            <p class="important__text">
+              Depending on your circumstances and what is important to you, a
+              lease could be a great option for your next vehicle. Below are
+              some important factors that may influence your decision.
+            </p>
+            <ul class="important__list">
+              <li class="important__item">
+                <img
+                  src="images/imp-1.jpg"
+                  alt=""
+                  class="important__item-img"
+                />
+                <p class="important__item-text">
+                  Monthly payments on leases are generally 20% - 30% cheaper
+                  than loans
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="images/imp-2.jpg"
+                  alt=""
+                  class="important__item-img"
+                />
+                <p class="important__item-text">
+                  You may be eligible for a tax break if you use the leased
+                  vehicle for business purposes
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="images/imp-3.jpg"
+                  alt=""
+                  class="important__item-img"
+                />
+                <p class="important__item-text">
+                  Easy to upgrade to the newest vehicle model every few years
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="images/imp-4.jpg"
+                  alt=""
+                  class="important__item-img"
+                />
+                <p class="important__item-text">
+                  tesThere are often fees charged if you drive more than your
+                  lease's mileage allowancet
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
@@ -126,6 +316,7 @@
               </li>
             </ul>
           </nav>
+
           <ul class="app">
             <li class="app__item">
               <a href="#" class="app__item-link"
@@ -138,6 +329,7 @@
               /></a>
             </li>
           </ul>
+
           <div class="footer__copy">
             <p class="footer__copy-text">
               For questions about the TrueCar Auto Buying Service please call
@@ -153,6 +345,7 @@
               TrueCar Terms of Service and Privacy Policy.
             </p>
           </div>
+
           <nav class="copy__nav">
             <ul class="copy__nav-list">
               <li class="copy__nav-item">
