--- a/contacts.html
+++ b/contacts.html
@@ -37,7 +37,11 @@
                   <a href="#" class="menu__list-link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="contacts.html" class="menu__list-link menu__list-link--active">CONTACT US</a>
+                  <a
+                    href="contacts.html"
+                    class="menu__list-link menu__list-link--active"
+                    >CONTACT US</a
+                  >
                 </li>
               </ul>
             </nav>
